--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
+  <body>
+    <h1>Goodbye!</h1>
 
-<h1>Hello!</h1>
-
-<p>This is my first website.</p>
-
-</body>
+    <p>This isn't my first website</p>
+  </body>
 </html>
